--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  geolocator: ^7.0.1
+  http: ^0.13.0
+  flutter_spinkit: ^4.1.2
+  rflutter_alert: ^2.0.2
 
 dev_dependencies:
   flutter_test:
